@@ -1,5 +1,11 @@
 2006-07-25 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/openvrml/browser.cpp
+	(create_file_url(const uri &)): Removed invalid assertion.
+	From Andrew Grieve <sgrieve@users.sourceforge.net>
+
+2006-07-25 Braden McDaniel  <braden@endoframe.com>
+
 	Doc-comment improvements.
 
 	* src/libopenvrml/openvrml/browser.cpp
